[gd_scene load_steps=9 format=3 uid="uid://dm5tx8oiet7d3"]

[ext_resource type="Script" uid="uid://o6g24oq0l2ag" path="res://levels/celar/Game1Pnew/game_1pnew.gd" id="1_kyqod"]
[ext_resource type="Texture2D" uid="uid://dys5aqili305" path="res://levels/celar/Game1Pnew/assets/celeiro3.png" id="1_qja2f"]
[ext_resource type="PackedScene" uid="uid://w0qpaga3tw4k" path="res://utilities/scenes/back_arrow/BackArrow.tscn" id="2_kyqod"]
[ext_resource type="PackedScene" uid="uid://dmpkgf6rymlra" path="res://levels/celar/Game1Pnew/box/burro.tscn" id="3_bgwlm"]
[ext_resource type="PackedScene" uid="uid://t30jiqdfqrti" path="res://levels/celar/Game1Pnew/box/cavalo.tscn" id="5_ro6jt"]
[ext_resource type="PackedScene" uid="uid://c5rqbprb1iby4" path="res://levels/celar/Game1Pnew/box/ovelha.tscn" id="6_bkmve"]
[ext_resource type="PackedScene" uid="uid://2ioa7y0j7jb" path="res://levels/celar/Game1Pnew/box/ovelha_m.tscn" id="7_rt2yp"]
[ext_resource type="PackedScene" uid="uid://ukyi5gysdj2o" path="res://levels/celar/Game1Pnew/box/vaca.tscn" id="8_dcbpm"]

[node name="Game1Pnew" type="Node2D"]
script = ExtResource("1_kyqod")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.999968, 0.500009)
scale = Vector2(0.757813, 0.639648)
texture = ExtResource("1_qja2f")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="BackArrow" parent="." instance=ExtResource("2_kyqod")]
position = Vector2(-484, -243)
scale = Vector2(0.5, 0.5)
scenePath = "res://levels/celar/barn.tscn"

[node name="CardSpawnPoint" type="Marker2D" parent="."]
position = Vector2(-1, 253)

[node name="Burro" parent="." instance=ExtResource("3_bgwlm")]
position = Vector2(-1, 1)

[node name="Cavalo" parent="." instance=ExtResource("5_ro6jt")]
position = Vector2(-485, 82)

[node name="Ovelha" parent="." instance=ExtResource("6_bkmve")]
position = Vector2(203, 81)

[node name="OvelhaM" parent="." instance=ExtResource("7_rt2yp")]
position = Vector2(-236, 93)

[node name="Vaca" parent="." instance=ExtResource("8_dcbpm")]
position = Vector2(448, 80)

[connection signal="card_frame_dropped" from="Burro" to="." method="_on_animal1_card_frame_dropped"]
[connection signal="card_frame_dropped" from="Cavalo" to="." method="_on_animal2_card_frame_dropped"]
[connection signal="card_frame_dropped" from="Ovelha" to="." method="_on_animal3_card_frame_dropped"]
[connection signal="card_frame_dropped" from="OvelhaM" to="." method="_on_animal4_card_frame_dropped"]
[connection signal="card_frame_dropped" from="Vaca" to="." method="_on_animal5_card_frame_dropped"]
